fixed issue with width and x scrollbar

--- a/src/components/pages/styles/form-controls.css
+++ b/src/components/pages/styles/form-controls.css
@@ -1,4 +1,3 @@
 .form-controls{
     text-align: center;
-    width: 100%;
 }
